--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -69,7 +69,7 @@ fi
 # enable color support of ls and also add handy aliases
 if [ -x /usr/bin/dircolors ]; then
     test -r ~/.dircolors && eval "$(dircolors -b ~/.dircolors)" || eval "$(dircolors -b)"
-    {{ if eq .chezmoi.osRelease.id "arch"}}
+    {{ if eq .chezmoi.osRelease.id "{{ .chezmoi.osRelease.id }}"}}
     alias ls='exa --git'
     {{ else }}
     alias ls='ls --color=auto'
