--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -69,11 +69,11 @@ fi
 # enable color support of ls and also add handy aliases
 if [ -x /usr/bin/dircolors ]; then
     test -r ~/.dircolors && eval "$(dircolors -b ~/.dircolors)" || eval "$(dircolors -b)"
-    {{ if eq .chezmoi.osRelease.id "{{ .chezmoi.osRelease.id }}"}}
+    {{ if eq .chezmoi.osRelease.id "arch" -}}
     alias ls='exa --git'
-    {{ else }}
+    {{ else -}}
     alias ls='ls --color=auto'
-    {{ end }}
+    {{- end }}
     alias dir='dir --color=auto'
     alias vdir='vdir --color=auto'
 
