--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -86,7 +86,13 @@ fi
 alias diff='diff --color=auto'
 alias ip='ip -color=auto'
 
-export PS1="\[\e[36m\]\u\[\e[m\]\[\e[35m\]@\[\e[m\]\[\e[36m\]\h\[\e[m\] \[\e[33m\]\W\[\e[m\]\[\e[32m\]\`parse_git_branch\`\[\e[m\] \[\e[31;40m\]\\$\[\e[m\]\[\e[36m\]>\[\e[m\] "
+# Check OS Release
+if [[ -f /etc/os-release ]]; then
+    . /etc/os-release
+fi
+export OS_NAME=${NAME}
+
+export PS1="(${OS_NAME})  \[\e[36m\]\u\[\e[m\]\[\e[35m\]@\[\e[m\]\[\e[36m\]\h\[\e[m\] \[\e[33m\]\W\[\e[m\]\[\e[32m\]\`parse_git_branch\`\[\e[m\] \[\e[31;40m\]\\$\[\e[m\]\[\e[36m\]>\[\e[m\] "
 case "$TERM" in
 xterm*|rxvt*)
     PS1="\[\e]0;\u@\h: \w\a\]$PS1"
