--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -107,7 +107,7 @@ export PATH=${PATH}:${HOME}/bin:/usr/local/go/bin
 
 # Bash history related
 export HISTIGNORE='pwd:exit:fg:bg:top:clear:history:ls:uptime:df:free:tmux'
-export HITSCONTROL=ignoredups
+export HISTCONTROL=ignoredups
 shopt -s histappend
 export HISTSIZE=16384
 
