--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -102,17 +102,18 @@ xterm*|rxvt*)
 esac
 
 export EDITOR=vim
-export PATH=${PATH}:${HOME}/bin:/usr/local/go/bin
+export PATH=${PATH}:${HOME}/bin:${HOME}/pkg/bin:/usr/local/go/bin
 
 
 # Bash history related
 export HISTIGNORE='pwd:exit:fg:bg:top:clear:history:ls:uptime:df:free:tmux'
 export HISTCONTROL=ignoredups
 shopt -s histappend
-export HISTSIZE=16384
+export HISTSIZE=800000
 
 # Check window size
 shopt -s checkwinsize
 
 # GPG related
+alias gpg="gpg --no-autostart"
 export GPG_TTY=$(tty)
