bashrc: add en_US to language

--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -104,6 +104,11 @@ esac
 export EDITOR=vim
 export PATH=${PATH}:${HOME}/bin:${HOME}/pkg/bin:/usr/local/go/bin
 
+# Language
+export LANGUAGE=en_US:en
+export LANG=en_US.UTF-8
+
+
 
 # Bash history related
 export HISTIGNORE='pwd:exit:fg:bg:top:clear:history:ls:uptime:df:free:tmux'
