bashrc: add .local/bin to PATH

--- a/dot_bashrc.tmpl
+++ b/dot_bashrc.tmpl
@@ -103,6 +103,7 @@ esac
 
 export EDITOR=vim
 export PATH=${PATH}:${HOME}/bin:${HOME}/pkg/bin:/usr/local/go/bin
+export PATH=${PATH}:${HOME}/.local/bin
 
 # Language
 export LANGUAGE=en_US:en
